# invtool

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  altiummain.py  pyproject.toml  requirements.txt  run_local.bat  run_local.sh  tasks.bat
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
app/: config.py  db.py  errors.py  logging.py  main.py  middleware.py  models.py  schemas.py  web.py
app/config/: part_types.yaml  ref_types.yaml
app/core/: config.py  refdata.py  settings.py
app/routers/: config_ref.py  distributors.py  locations.py  part_distributors.py  part_documents.py  part_types.py  parts.py  purchase_orders.py  reports.py  stock.py  ui_distributor_catalog.py  ui_parts.py  ui_purchase_orders.py  ui_reports.py
app/routes/: health.py  home.py  infra.py
app/services/: codes.py  files.py  ipn.py  receiving.py
app/static/js/: app.js
app/static/scss/: _variables.scss  main.scss
app/static/scss/base/: _reset.scss
app/static/scss/components/: _forms.scss
app/static/scss/layout/: _layout.scss
app/templates/: base.html  index.html
app/templates/errors/: 404.html  422.html  500.html
app/templates/partials/: messages.html
app/utils/: __init__.py  htmx.py  messages.py
app/web/static/: main.css  main.js
app/web/templates/: base.html
docs/: dod.md  project_specifications.md
migrations/: env.py
migrations/versions/: 0001_create_core_tables.py  0002_inventory_core.py  0003_parttype_unique_per_parent.py  0004_distributors.py  0005_purchase_orders.py  0006_po_extras_and_docs.py  0007_part_documents_and_kinds.py  0008_counters_and_movement_code.py
scripts/: load_types.py  seed_demo.py
tests/: test_db_basics.py  test_errors.py  test_flash.py  test_health.py
(+14 files in other folders)
