[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-invtool"
version = "0.1.0"
description = "Inventory management web app for IRIS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "SQLAlchemy>=2.0.29",
    "alembic>=1.13.1",
    "Jinja2>=3.1.4",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "types-Jinja2>=2.11.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "instance*", "docs*", "scripts*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/**/*"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "ARG", "W", "PERF", "PIE"]
ignore = ["E203"]


[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
